Update roadmap for the next few phases and be specific (#3)
* Updates to RoadMap and some plans.

* S3 roadmap update

* Roadmap updates